// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CToast customize 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="toast fade show bg-warning bazinga"
    role="alert"
    style="transition: opacity 150ms linear, height 150ms linear; opacity: 1;"
  >
    <div
      class="toast-header"
    >
      <span
        class="fw-semibold me-auto"
      >
        title
      </span>
      <button
        aria-label="Close"
        class="btn btn-close"
      />
    </div>
    <div
      class="toast-body"
    >
      Test
    </div>
  </div>
</div>
`;

exports[`loads and displays CToast component 1`] = `
<div>
  <div
    aria-atomic="true"
    aria-live="assertive"
    class="toast fade show"
    role="alert"
    style="transition: opacity 150ms linear, height 150ms linear; opacity: 1;"
  >
    <div
      class="toast-body"
    >
      Test
    </div>
    <button
      aria-label="Close"
      class="btn btn-close"
    />
  </div>
</div>
`;
